--- a/_frontend/styles/tor.scss
+++ b/_frontend/styles/tor.scss
@@ -1,6 +1,17 @@
 body {
   padding-top: 90px;
   font-family: "Roboto", sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+.wrapper {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+.content {
+    flex: 1;
 }
 .page-header {
   text-align: center;
@@ -11,7 +22,7 @@ body {
   font-family: "Saira Semi Condensed";
 }
 #footer {
-  margin: 10em 0;
+  margin: 4rem 0 1rem 0;
   text-align: center;
   font-size: 0.9rem;
 }
