--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,16 +17,20 @@
 <body>
 
   {% include nav.html %}
-
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        {{ content }}
+  <div class="wrapper">
+    <div class="content">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            {{ content }}
+          </div>
+        </div>
       </div>
     </div>
+
+    {% include footer.html %}
   </div>
 
-  {% include footer.html %}
 </body>
 
 </html>
